// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixtures test all.json 1`] = `
Object {
  "key": null,
  "keyRange": null,
  "parent": null,
  "properties": Array [
    Object {
      "key": "empty_string",
      "keyRange": Object {
        "end": 17,
        "start": 5,
      },
      "parent": [Circular],
      "type": "string",
      "value": "",
      "valueRange": Object {
        "end": 21,
        "start": 21,
      },
    },
    Object {
      "key": "string",
      "keyRange": Object {
        "end": 33,
        "start": 27,
      },
      "parent": [Circular],
      "type": "string",
      "value": "string",
      "valueRange": Object {
        "end": 43,
        "start": 37,
      },
    },
    Object {
      "key": "\\\\\\"",
      "keyRange": Object {
        "end": 51,
        "start": 49,
      },
      "parent": [Circular],
      "type": "string",
      "value": "\\\\\\"",
      "valueRange": Object {
        "end": 56,
        "start": 54,
      },
    },
    Object {
      "key": "",
      "keyRange": Object {
        "end": 62,
        "start": 62,
      },
      "parent": [Circular],
      "type": "string",
      "value": "",
      "valueRange": Object {
        "end": 65,
        "start": 65,
      },
    },
    Object {
      "key": "number",
      "keyRange": Object {
        "end": 77,
        "start": 71,
      },
      "parent": [Circular],
      "type": "number",
      "value": "0",
      "valueRange": Object {
        "end": 80,
        "start": 80,
      },
    },
    Object {
      "key": "null",
      "keyRange": Object {
        "end": 90,
        "start": 86,
      },
      "parent": [Circular],
      "type": "null",
      "value": "null",
      "valueRange": Object {
        "end": 97,
        "start": 93,
      },
    },
    Object {
      "key": "false",
      "keyRange": Object {
        "end": 107,
        "start": 102,
      },
      "parent": [Circular],
      "type": "boolean",
      "value": "false",
      "valueRange": Object {
        "end": 114,
        "start": 109,
      },
    },
    Object {
      "key": "true",
      "keyRange": Object {
        "end": 123,
        "start": 119,
      },
      "parent": [Circular],
      "type": "boolean",
      "value": "true",
      "valueRange": Object {
        "end": 130,
        "start": 126,
      },
    },
    Object {
      "key": "array",
      "keyRange": Object {
        "end": 140,
        "start": 135,
      },
      "parent": [Circular],
      "properties": Array [],
      "type": "array",
      "valueRange": Object {
        "end": 144,
        "start": 143,
      },
    },
    Object {
      "key": "object",
      "keyRange": Object {
        "end": 156,
        "start": 150,
      },
      "parent": [Circular],
      "properties": Array [],
      "type": "object",
      "valueRange": Object {
        "end": 160,
        "start": 159,
      },
    },
    Object {
      "key": "deep",
      "keyRange": Object {
        "end": 170,
        "start": 166,
      },
      "parent": [Circular],
      "properties": Array [
        Object {
          "key": 0,
          "keyRange": null,
          "parent": [Circular],
          "properties": Array [
            Object {
              "key": "empty_string",
              "keyRange": Object {
                "end": 200,
                "start": 188,
              },
              "parent": [Circular],
              "type": "string",
              "value": "",
              "valueRange": Object {
                "end": 204,
                "start": 204,
              },
            },
            Object {
              "key": "string",
              "keyRange": Object {
                "end": 220,
                "start": 214,
              },
              "parent": [Circular],
              "type": "string",
              "value": "string",
              "valueRange": Object {
                "end": 230,
                "start": 224,
              },
            },
            Object {
              "key": "\\\\\\"",
              "keyRange": Object {
                "end": 242,
                "start": 240,
              },
              "parent": [Circular],
              "type": "string",
              "value": "\\\\\\"",
              "valueRange": Object {
                "end": 247,
                "start": 245,
              },
            },
            Object {
              "key": "number",
              "keyRange": Object {
                "end": 263,
                "start": 257,
              },
              "parent": [Circular],
              "type": "number",
              "value": "0",
              "valueRange": Object {
                "end": 266,
                "start": 266,
              },
            },
            Object {
              "key": "null",
              "keyRange": Object {
                "end": 280,
                "start": 276,
              },
              "parent": [Circular],
              "type": "null",
              "value": "null",
              "valueRange": Object {
                "end": 287,
                "start": 283,
              },
            },
            Object {
              "key": "false",
              "keyRange": Object {
                "end": 301,
                "start": 296,
              },
              "parent": [Circular],
              "type": "boolean",
              "value": "false",
              "valueRange": Object {
                "end": 308,
                "start": 303,
              },
            },
            Object {
              "key": "true",
              "keyRange": Object {
                "end": 321,
                "start": 317,
              },
              "parent": [Circular],
              "type": "boolean",
              "value": "true",
              "valueRange": Object {
                "end": 328,
                "start": 324,
              },
            },
          ],
          "type": "object",
          "valueRange": Object {
            "end": 333,
            "start": 179,
          },
        },
        Object {
          "key": 1,
          "keyRange": null,
          "parent": [Circular],
          "properties": Array [
            Object {
              "key": 0,
              "keyRange": null,
              "parent": [Circular],
              "type": "number",
              "value": "1",
              "valueRange": Object {
                "end": 341,
                "start": 341,
              },
            },
            Object {
              "key": 1,
              "keyRange": null,
              "parent": [Circular],
              "type": "string",
              "value": "2",
              "valueRange": Object {
                "end": 345,
                "start": 344,
              },
            },
            Object {
              "key": 2,
              "keyRange": null,
              "parent": [Circular],
              "type": "null",
              "value": "null",
              "valueRange": Object {
                "end": 351,
                "start": 347,
              },
            },
            Object {
              "key": 3,
              "keyRange": null,
              "parent": [Circular],
              "type": "boolean",
              "value": "false",
              "valueRange": Object {
                "end": 357,
                "start": 352,
              },
            },
            Object {
              "key": 4,
              "keyRange": null,
              "parent": [Circular],
              "type": "boolean",
              "value": "true",
              "valueRange": Object {
                "end": 362,
                "start": 358,
              },
            },
          ],
          "type": "array",
          "valueRange": Object {
            "end": 362,
            "start": 340,
          },
        },
        Object {
          "key": 2,
          "keyRange": null,
          "parent": [Circular],
          "type": "number",
          "value": "1",
          "valueRange": Object {
            "end": 369,
            "start": 369,
          },
        },
        Object {
          "key": 3,
          "keyRange": null,
          "parent": [Circular],
          "type": "string",
          "value": "2",
          "valueRange": Object {
            "end": 373,
            "start": 372,
          },
        },
        Object {
          "key": 4,
          "keyRange": null,
          "parent": [Circular],
          "type": "null",
          "value": "null",
          "valueRange": Object {
            "end": 379,
            "start": 375,
          },
        },
        Object {
          "key": 5,
          "keyRange": null,
          "parent": [Circular],
          "type": "boolean",
          "value": "false",
          "valueRange": Object {
            "end": 385,
            "start": 380,
          },
        },
        Object {
          "key": 6,
          "keyRange": null,
          "parent": [Circular],
          "type": "boolean",
          "value": "true",
          "valueRange": Object {
            "end": 390,
            "start": 386,
          },
        },
      ],
      "type": "array",
      "valueRange": Object {
        "end": 393,
        "start": 173,
      },
    },
  ],
  "type": "object",
  "valueRange": Object {
    "end": 395,
    "start": 0,
  },
}
`;

exports[`fixtures test array.json 1`] = `
Object {
  "key": null,
  "keyRange": null,
  "parent": null,
  "properties": Array [
    Object {
      "key": 0,
      "keyRange": null,
      "parent": [Circular],
      "type": "number",
      "value": "1",
      "valueRange": Object {
        "end": 1,
        "start": 1,
      },
    },
    Object {
      "key": 1,
      "keyRange": null,
      "parent": [Circular],
      "type": "string",
      "value": "2",
      "valueRange": Object {
        "end": 5,
        "start": 4,
      },
    },
    Object {
      "key": 2,
      "keyRange": null,
      "parent": [Circular],
      "type": "null",
      "value": "null",
      "valueRange": Object {
        "end": 11,
        "start": 7,
      },
    },
    Object {
      "key": 3,
      "keyRange": null,
      "parent": [Circular],
      "type": "boolean",
      "value": "false",
      "valueRange": Object {
        "end": 17,
        "start": 12,
      },
    },
    Object {
      "key": 4,
      "keyRange": null,
      "parent": [Circular],
      "type": "boolean",
      "value": "true",
      "valueRange": Object {
        "end": 22,
        "start": 18,
      },
    },
  ],
  "type": "array",
  "valueRange": Object {
    "end": 22,
    "start": 0,
  },
}
`;

exports[`fixtures test boolean.json 1`] = `
Object {
  "key": null,
  "keyRange": null,
  "parent": null,
  "type": "boolean",
  "value": "false",
  "valueRange": Object {
    "end": 5,
    "start": 0,
  },
}
`;

exports[`fixtures test null.json 1`] = `
Object {
  "key": null,
  "keyRange": null,
  "parent": null,
  "type": "null",
  "value": "null",
  "valueRange": Object {
    "end": 4,
    "start": 0,
  },
}
`;

exports[`fixtures test number.json 1`] = `
Object {
  "key": null,
  "keyRange": null,
  "parent": null,
  "type": "number",
  "value": "123",
  "valueRange": Object {
    "end": 2,
    "start": 0,
  },
}
`;

exports[`fixtures test string.json 1`] = `
Object {
  "key": null,
  "keyRange": null,
  "parent": null,
  "type": "string",
  "value": "string",
  "valueRange": Object {
    "end": 7,
    "start": 1,
  },
}
`;
